# lakehouse-rosetta

./: .gitignore  README.md  bench-upsert.py  pyproject.toml
data/: seed.py
delta/: multimodal.py  upsert.py
iceberg/: multimodal.py  upsert.py
lance/: multimodal.py  upsert.py
